--- a/templates/calendarapp/dashboard.html
+++ b/templates/calendarapp/dashboard.html
@@ -1,6 +1,19 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
+{% block title %}Event Dashboard{% endblock title %}
+
+{% block breadcrumb %}
+    <div>
+        <h1><i class="fa fa-dashboard"></i> Dashboard</h1>
+        <p>Event Dashboard</p>
+    </div>
+    <ul class="app-breadcrumb breadcrumb">
+        <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
+        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+    </ul>
+{% endblock breadcrumb %}
+
 {% block content %}
 <div class="row">
     <div class="col-md-6 col-lg-3">
