--- a/templates/accounts/signin.html
+++ b/templates/accounts/signin.html
@@ -44,7 +44,7 @@
                                                 <div class="col-md-12">
                                                     <div class="form-group">
                                                         <label class="label" for="email">Email Address</label>
-                                                        {{ form.username }}
+                                                        {{ form.email }}
                                                     </div>
                                                 </div>
                                                 <div class="col-md-12">
