add user registration

--- a/templates/accounts/signin.html
+++ b/templates/accounts/signin.html
@@ -55,7 +55,7 @@
                                                 </div>
                                                 <div class="col-md-12">
                                                     <div class="form-group">
-                                                        <button type="submit" class="btn btn-primary submit p-3">Sign In</button>
+                                                        <button type="submit" class="btn btn-primary">Sign In</button>
                                                     </div>
                                                 </div>
                                             </div>
