--- a/templates/calendarapp/dashboard.html
+++ b/templates/calendarapp/dashboard.html
@@ -30,7 +30,7 @@
             <i class="icon fa fa-thumbs-o-up fa-3x"></i>
             <div class="info">
                 <h4>Total Running Events</h4>
-                <p><b>25</b></p>
+                <p><b>{{ running_events.count }}</b></p>
             </div>
         </div>
     </div>
@@ -52,75 +52,46 @@
             </div>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <div class="tile">
-            <h3 class="tile-title">Monthly Event</h3>
-            <div class="embed-responsive embed-responsive-16by9">
-                <canvas class="embed-responsive-item" id="lineChartDemo"></canvas>
+            <div class="tile-body">
+                <div class="table-responsive">
+                    <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <table class="table table-hover table-bordered dataTable no-footer" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                                    <thead>
+                                        <tr role="row">
+                                            <th class="sorting_asc" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 261.641px;">SL</th>
+                                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 417.312px;">Event Name</th>
+                                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 189.281px;">Start Time</th>
+                                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Age: activate to sort column ascending" style="width: 102.141px;">End Time</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for event in latest_events %}
+                                            <tr role="row" class="odd">
+                                                <td class="sorting_1">{{ forloop.counter }}</td>
+                                                <td>{{ event.title }}</td>
+                                                <td>{{ event.start_time }}</td>
+                                                <td>{{ event.end_time }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <div class="tile">
-            <h3 class="tile-title">Support Requests</h3>
-            <div class="embed-responsive embed-responsive-16by9">
-                <canvas class="embed-responsive-item" id="pieChartDemo"></canvas>
-            </div>
-        </div>
-    </div>
+    
 </div>
 {% endblock content %}
 
 {% block extrascripts %}
-<!-- Page specific javascripts-->
-<script type="text/javascript" src="{% static 'js/plugins/chart.js' %}"></script>
-<script type="text/javascript">
-    var data = {
-        labels: ["January", "February", "March", "April", "May"],
-        datasets: [
-            {
-                label: "My First dataset",
-                fillColor: "rgba(220,220,220,0.2)",
-                strokeColor: "rgba(220,220,220,1)",
-                pointColor: "rgba(220,220,220,1)",
-                pointStrokeColor: "#fff",
-                pointHighlightFill: "#fff",
-                pointHighlightStroke: "rgba(220,220,220,1)",
-                data: [65, 59, 80, 81, 56],
-            },
-            {
-                label: "My Second dataset",
-                fillColor: "rgba(151,187,205,0.2)",
-                strokeColor: "rgba(151,187,205,1)",
-                pointColor: "rgba(151,187,205,1)",
-                pointStrokeColor: "#fff",
-                pointHighlightFill: "#fff",
-                pointHighlightStroke: "rgba(151,187,205,1)",
-                data: [28, 48, 40, 19, 86],
-            },
-        ],
-    };
-    var pdata = [
-        {
-            value: 300,
-            color: "#46BFBD",
-            highlight: "#5AD3D1",
-            label: "Complete",
-        },
-        {
-            value: 50,
-            color: "#F7464A",
-            highlight: "#FF5A5E",
-            label: "In-Progress",
-        },
-    ];
-
-    var ctxl = $("#lineChartDemo").get(0).getContext("2d");
-    var lineChart = new Chart(ctxl).Line(data);
-
-    var ctxp = $("#pieChartDemo").get(0).getContext("2d");
-    var pieChart = new Chart(ctxp).Pie(pdata);
-</script>
+    <script type="text/javascript" src="{% static 'js/plugins/jquery.dataTables.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/plugins/dataTables.bootstrap.min.js' %}"></script>
+    <script type="text/javascript">$('#sampleTable').DataTable();</script>
 {% endblock extrascripts %}
